--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+:root {
+    --dw-primaryColor: rgb(#91CBFB);
+    --dw-secondaryColor: rgb(#4294BA);
+    --formFocusColor: var(--dw-secondaryColor);
+    --formFocusShadowColor: (#91CBFB);
+}
 
 
 .sticky-nav {
@@ -7,34 +13,39 @@
     width: 100%;
 }
 
+.form-control:focus {
+    border-color: var(--formFocusColor);
+    box-shadow: 0 0 0 .25rem var(--formFocusShadowColor)
+}
+
 body {
-     font-family: 'Crimson Text', serif;
+    font-family: 'Crimson Text', serif;
 }
 
 
-.title{
-    font-family: font-family: 'Cardo', serif;
+.title {
+    font-family: font-family: 'Cardo', serif
 }
 
 /* default styles */
-.header{
-    
+.header {
+
     background-repeat: no-repeat;
     background-position: fixed;
     background-size: cover;
     background-color: cornflowerblue;
     background-image: rbg(217, 192, 182, .7)
-    
 }
 
 /* show big image on bigger screens    */
-@media only screen and (min-width: 992px){
+@media only screen and (min-width: 992px) {
     .header {
         background-image: url("/img/DaneWhitmanLarge.png");
         min-height: 400px;
     }
 }
- /* show small image on smaller screens   */
+
+/* show small image on smaller screens   */
 @media only screen and (min-width: 576px) and (max-width: 991px) {
     .header {
         background-image: url("/img/DaneWhitmanSmall.png");
